# SC4Mapper-2026

./: .gitignore  GradientReader.py  QuestionDialog.py  README.md  SC4Map.py  SC4MapApp.py  SC4Mapper.spec  about.py  pyproject.toml  qfs.py  rgnReader.py  tools3d.py  utils.py  zipUtils.py
.github/workflows/: ci.yml  release.yml
config/: SC4Mapper.ini
scripts/: run_sc4mapper.py
src/sc4mapper/: SC4Map.py  SC4MapApp.py  __init__.py  __main__.py  app.py  dialogs.py  filename_utils.py  region.py  resources.py  rgnReader.py  settings.py  terrain.py  version.py
tests/: test_backend.py  test_integration.py
