[project]
name = "sc4mapper"
version = "2025.0"
description = "SimCity 4 region import/export tool"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "license.txt" }
authors = [
    { name = "Wouanagaine" },
    { name = "JoeST" },
]
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.0",
    "wxPython>=4.2",
]

[project.scripts]
sc4mapper = "sc4mapper.SC4Map:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sc4mapper = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
